<resources>
    <string name="app_name">Nanopost</string>
    <string name="evolitist">Evolitist</string>
    <string name="date">Apr 1, 2022</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="likes_count">2</string>
    <string name="media_description">media</string>
    <string name="profile_name">Evolist</string>
    <string name="user_status">just to do it.</string>
    <string name="images_count">12</string>
    <string name="images">Images</string>
    <string name="subscribers_count">5</string>
    <string name="subscribers">subscribers</string>
    <string name="posts_count">16</string>
    <string name="posts">posts</string>
    <string name="button_subscribe">Subscribe</string>
    <string name="Images">Images</string>
    <string name="delete">удалить</string>
    <string name="search">search</string>
    <string name="feed">Feed</string>
    <string name="profile">profile</string>
    <string name="explore">explore</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</string>
    <string name="media_small">media_small</string>

    <string name="text_post">котики-наркотики</string>
    <string name="url_image1">https://i.pinimg.com/564x/98/3a/64/983a6470c037bb11390faf4c868f9c5c.jpg</string>
    <string name="back">back</string>
    <string name="my_profile">My profile</string>
    <string name="post">Post</string>
    <string name="nanopost">Nanopost</string>
    <string name="continue_text">Continue</string>
    <string name="register">Register</string>
    <string name="create">create</string>
    <string name="add_image">add image</string>
    <string name="exit">exit</string>
    <string name="loading_post">загрузка поста...</string>
    <string name="incorrectUsernameLength">usernames length must be more than 2 and less than 17</string>
    <string name="password_warning">passwords length must be 8 and more and less than 16</string>
    <string name="long_password_warning">passwords length must be less than 16</string>
    <string name="passwords_must_coincide">passwords must coincide</string>
    <string name="incorrect_password">incorrect password</string>
    <string name="edit">edit</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="subscribe">subscribe</string>
    <string name="unsubscribe">unsubscribe</string>
    <string name="image">image</string>
</resources>