<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/md_theme_dark_surface"
    >



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewUserProfileImage"
            android:backgroundTint="@color/md_theme_dark_primary"
            android:layout_width="@dimen/user_profile_image_size"
            android:layout_height="@dimen/user_profile_image_size"
            android:layout_margin="@dimen/general_margin"
            android:background="@color/md_theme_dark_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:shapeAppearance="@style/rounded_image"
            tools:background="@color/md_theme_dark_background" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginTop="@dimen/general_margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/profile_name"
            android:textSize="@dimen/user_name_text_size"
            app:layout_constraintStart_toEndOf="@id/imageViewUserProfileImage"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/md_theme_light_onSecondary"
            />

        <TextView
            android:id="@+id/textViewUserStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginTop="@dimen/between_texts_margin"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/user_status"
            android:textSize="@dimen/status_text_size"
            app:layout_constraintStart_toEndOf="@id/imageViewUserProfileImage"
            app:layout_constraintTop_toBottomOf="@id/textViewUserName"
            android:textColor="@color/md_theme_light_onSecondary"
            />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/general_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewUserProfileImage" />

        <LinearLayout
            android:id="@+id/linerLayoutProfileData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/general_margin"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/images_count"
                    android:textSize="@dimen/data_profile_numbers_text_size"
                    android:textColor="@color/md_theme_light_onSecondary"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/images"
                    android:textSize="@dimen/data_profile_text_size"
                    android:textColor="@color/md_theme_light_onSecondary"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:textColor="@color/md_theme_light_onSecondary"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribers_count"
                    android:textSize="@dimen/data_profile_numbers_text_size"
                    android:textColor="@color/md_theme_light_onSecondary"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribers"
                    android:textSize="@dimen/data_profile_text_size"
                    android:textColor="@color/md_theme_light_onSecondary"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts_count"
                    android:textSize="@dimen/data_profile_numbers_text_size"
                    android:textColor="@color/md_theme_light_onSecondary"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts"
                    android:textSize="@dimen/data_profile_text_size"
                    android:textColor="@color/md_theme_light_onSecondary"
                    />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            android:text="@string/button_subscribe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/general_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linerLayoutProfileData" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

