<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewPostCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewPostProfileImage"
            android:layout_width="@dimen/post_profile_image_size"
            android:layout_height="@dimen/post_profile_image_size"
            android:layout_margin="@dimen/general_margin"
            android:background="@color/md_theme_dark_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/rounded_image" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewProfileName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/evolitist"
            android:textSize="@dimen/post_name_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageViewPostProfileImage"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginTop="@dimen/between_texts_margin"
            android:layout_marginEnd="@dimen/general_margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageViewPostProfileImage"
            app:layout_constraintTop_toBottomOf="@id/textViewProfileName" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/general_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDate" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            android:text="@string/lorem"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLines="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <ImageView
            android:id="@+id/imageViewMedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/general_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/media_description"
            android:src="@drawable/media"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPost" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:id="@+id/imageButtonFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            app:icon="@drawable/favorite"

            android:text="@string/likes_count"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewMedia" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>