<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityPost"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/post_menu"
            app:navigationIcon="@drawable/leading_icon"
            app:title="Post"
            app:titleCentered="true" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageViewPostProfileImage"
                android:layout_width="@dimen/post_profile_image_size"
                android:layout_height="@dimen/post_profile_image_size"
                android:layout_margin="@dimen/general_margin"
                android:background="@color/md_theme_dark_primary"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toStartOf="@+id/textViewProfileName"
                app:layout_constraintStart_toStartOf="parent"
                app:shapeAppearance="@style/rounded_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewProfileName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/evolitist"
                android:textSize="@dimen/post_name_text_size"
                app:layout_constraintBottom_toTopOf="@+id/textViewDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageViewPostProfileImage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/general_margin"
                android:layout_marginTop="@dimen/between_texts_margin"
                android:layout_marginEnd="@dimen/general_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageViewPostProfileImage"
                app:layout_constraintTop_toBottomOf="@id/textViewProfileName" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/general_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDate" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewPostText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_margin"
                android:layout_marginTop="4dp"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <ImageView
                android:id="@+id/imageViewMedia1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/general_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/media_description"
                android:scaleType="centerCrop"
                android:src="@drawable/media"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewPostText" />

            <ImageView
                android:id="@+id/imageViewMedia2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/general_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/media_description"
                android:scaleType="centerCrop"
                android:src="@drawable/media"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewMedia1" />

            <ImageView
                android:id="@+id/imageViewMedia3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/general_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/media_description"
                android:scaleType="centerCrop"
                android:src="@drawable/media"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewMedia2" />

            <ImageView
                android:id="@+id/imageViewMedia4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/general_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/media_description"
                android:scaleType="centerCrop"
                android:src="@drawable/media"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewMedia3" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/imageButtonFavorite"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_margin"
                android:text="@string/likes_count"

                app:icon="@drawable/favorite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewMedia4" />

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/recyclerView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="@dimen/general_margin"-->
<!--                android:orientation="vertical"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="@id/recyclerView"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/imageViewPost"-->
<!--                tools:itemCount="5"-->
<!--                />-->


<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/imageButtonFavorite"-->
<!--                style="@style/Widget.Material3.Button.ElevatedButton"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="@dimen/general_margin"-->
<!--                android:text="@string/likes_count"-->

<!--                app:icon="@drawable/favorite"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/recyclerView" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
